tests/snapshots/examples_fixtures/aoc__2025__aoc_day12_haskell_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day12_haskell_style.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2025/aoc_day12_haskell_style.flx:37:5
   |
37 |     fold(chars(s), 0, /(acc, c) -> if c == "#" { acc + 1 } else { acc })
   |     ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `str_at`.

  examples/aoc/2025/aoc_day12_haskell_style.flx:60:13
   |
60 |     let t = str_at(tokens, idx)
   |             ^^^^^^

Hint:
  Define it first: let str_at = ...;


error[E004]: Undefined Variable

I can't find a value named `filter`.

  examples/aoc/2025/aoc_day12_haskell_style.flx:85:41
   |
85 |         let parts = split(line, " ") |> filter(/t -> trim(t) != "")
   |                                         ^^^^^^

Hint:
  Define it first: let filter = ...;

Found 3 errors.
== stdout ==
<not executed>
